--- a/openjdk/build.xml
+++ b/openjdk/build.xml
@@ -50,9 +50,9 @@
 							<copy file="custom_jtreg.tar.gz" tofile="${jtregTar}.gz"/>
 					</then>
 				<else>
-					<echo message="Getting Jtreg from https://ci.adoptopenjdk.net/job/jtreg/lastSuccessfulBuild/artifact/${jtregTar}.gz"/>
+					<echo message="Getting Jtreg from  http://joeylee97.oss-cn-hangzhou-zmf.aliyuncs.com/jtreg-4.2.0-tip.tar.gz"/>
 					<exec executable="curl" failonerror="true">
-						<arg line="--retry 5 -OLJSks https://ci.adoptopenjdk.net/job/jtreg/lastSuccessfulBuild/artifact/${jtregTar}.gz" />
+						<arg line="--retry 5 -OLJSks  http://joeylee97.oss-cn-hangzhou-zmf.aliyuncs.com/jtreg-4.2.0-tip.tar.gz" />
 					</exec>
 				</else>
 				</if>
